--- a/back/package.json
+++ b/back/package.json
@@ -25,7 +25,11 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.3.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
