Add tabwidth to prettier config

--- a/back/package.json
+++ b/back/package.json
@@ -90,7 +90,8 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "tabWidth": 2
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
