--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -24,8 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,6 @@
   "devDependencies": {
     "@types/react": "^16.14.2",
     "@types/styled-components": "^5.1.7"
-  }
+  },
+  "homepage": "https://dannylisa.github.io/velogfront"
 }
