--- a/back/package.json
+++ b/back/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^7.6.7",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
@@ -79,6 +79,9 @@
     "typescript": "^4.0.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -93,6 +96,15 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      ".module.ts",
+      ".entity.ts",
+      ".dto.ts",
+      ".guard.ts",
+      ".strategy.ts",
+      ".docs.ts"
+    ],
     "testEnvironment": "node"
   },
   "prettier": {
