add test ignore pattern

--- a/back/package.json
+++ b/back/package.json
@@ -103,7 +103,8 @@
       ".dto.ts",
       ".guard.ts",
       ".strategy.ts",
-      ".docs.ts"
+      ".docs.ts",
+      "swagger"
     ],
     "testEnvironment": "node"
   },
