--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
+    "react-cool-dimensions": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
