--- a/front/package.json
+++ b/front/package.json
@@ -51,5 +51,5 @@
     "@types/react": "^16.14.2",
     "@types/styled-components": "^5.1.7"
   },
-  "homepage": "https://dannylisa.github.io/velogfront"
+  "homepage": "https://dannylisa.github.io/stackfolio-demo"
 }
