--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - IN_CONTAINER=true
       - PORT=3000
-      - DATABASE_URL=postgresql://dohan:passwd@pg:5432/velog?schema=public
+      - DATABASE_URL=postgresql://dohan:passwd@pg:5432/stackfolio?schema=public
       # Connection URL: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
     volumes:
       - ./:/app:delegated
@@ -25,13 +25,12 @@ services:
     image: postgres:13.1
     restart: always
     environment:
-      # - POSTGRES_USER=dohan
+      - POSTGRES_USER=dohan
       - POSTGRES_PASSWORD=passwd
-      # - POSTGRES_DB=velog
+      - POSTGRES_DB=stackfolio
     volumes:
       - ./db/data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/1-init.sql
-      # - ./db/schema.sql:/docker-entrypoint-initdb.d/2-schema.sql
     ports:
       - '5432:5432'
     healthcheck:
