--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -36,19 +36,19 @@ services:
     healthcheck:
       test: pg_isready -h 127.0.0.1
 
-  pgAdmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=dohan@pgadmin.com
-      - PGADMIN_DEFAULT_PASSWORD=passwd
-      - PGADMIN_LISTEN_PORT=80
-    ports:
-      - '8080:80'
-    volumes:
-      - ./pgadmin/data:/var/lib/pgadmin
-    depends_on:
-      - pg
-    links:
-      - 'pg:pgsql-server'
+  # pgAdmin:
+  #   container_name: pgadmin_container
+  #   image: dpage/pgadmin4
+  #   restart: always
+  #   environment:
+  #     - PGADMIN_DEFAULT_EMAIL=dohan@pgadmin.com
+  #     - PGADMIN_DEFAULT_PASSWORD=passwd
+  #     - PGADMIN_LISTEN_PORT=80
+  #   ports:
+  #     - '8080:80'
+  #   volumes:
+  #     - ./pgadmin/data:/var/lib/pgadmin
+  #   depends_on:
+  #     - pg
+  #   links:
+  #     - 'pg:pgsql-server'
